--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ethereum-blocks",
   "license": "UNLICENSED",
   "scripts": {
+    "print": "python ./generate.py",
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ ptPierre/ethereum-blocks",
@@ -12,7 +13,9 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.71.0",
-    "@graphprotocol/graph-ts": "0.32.0"
+    "@graphprotocol/graph-ts": "^0.32.0"
   },
-  "devDependencies": { "matchstick-as": "0.5.0" }
+  "devDependencies": {
+    "matchstick-as": "0.5.0"
+  }
 }
