--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -5,28 +5,20 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
-    name: test
+    name: ConverterRegistryContract
     network: mainnet
     source:
       address: "0x0ddff327ddf7fe838e3e63d02001ef23ad1ede8e"
-      abi: test
-      startBlock: 0
+      abi: ConverterRegistryContract
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
         - ConverterAddition
-        - ConverterRemoval
-        - OwnerUpdate
       abis:
-        - name: test
-          file: ./abis/test.json
-      eventHandlers:
-        - event: ConverterAddition(indexed address,address)
-          handler: handleConverterAddition
-        - event: ConverterRemoval(indexed address,address)
-          handler: handleConverterRemoval
-        - event: OwnerUpdate(indexed address,indexed address)
-          handler: handleOwnerUpdate
-      file: ./src/test.ts
+        - name: ConverterRegistryContract
+          file: ./abis/ConverterRegistryContract.json
+      blockHandlers:
+        - handler: handleBlock
+      file: ./src/block.ts
