--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
-  "extends": "@graphprotocol/graph-ts/types/tsconfig.base.json",
-  "include": ["src", "tests"]
+  "compilerOptions": {
+    "lib": [
+      "es6",
+      "dom" 
+    ],
+   
+  }
 }
